2014-05-27  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/agent_wizard.snmp_explorer.php: Fix wrong
	parameters like unit setted in SNMP Wizard for ticket #796

2014-05-27  Miguel de Dios <miguel.dedios@artica.es>
	
	* extras/pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql,
	extras/pandoradb_migrate_5.0.x_to_5.1.oracle.sql,
	extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql,
	godmode/reporting/visual_console_builder.editor.js,
	include/functions_custom_graphs.php,
	include/ajax/visual_console_builder.ajax.php,
	include/functions_graph.php, include/functions_visual_map.php,
	include/functions_visual_map_editor.php, pandoradb.sql,
	pandoradb.postgreSQL.sql, pandoradb.oracle.sql,
	operation/reporting/graph_viewer.php, pandoradb_data.sql: added the
	custom graphs into the visualmaps.
	
	Incident: #367

2014-05-27  Ramon Novoa  <rnovoa@artica.es>

	* godmode/agentes/module_manager_editor_network.php,
	  include/functions_snmp_browser.php: Hide SNMP v3 passwords.

2014-05-27  Vanessa Gil <vanessa.gil@artica.es>

	* operation/snmpconsole/snmp_view.php: Changed ACLs. All 
	users can view traps whose source isn't in console.

2014-05-27  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager.php,
	operation/agentes/estado_monitores.php, general/main_menu.php: fixed
	the PHP warnings.

2014-05-26  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_networkmap.php: added the generate networkmap
	from the ip mask.

2014-05-26  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/agentes/configurar_agente.php: Comment module
	in configuration file when this module is disabled.

2014-05-25  Junichi Satoh  <junichi@rworks.jp>

	* godmode/modules/manage_network_components.php,
	godmode/modules/manage_network_components_form.php
	godmode/modules/manage_network_components_form_common.php,
	pandoradb.sql, pandoradb.oracle.sql, pandoradb.postgreSQL.sql,
	extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql,