@@ -1,3 +1,11 @@
+2014-05-27  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* godmode/reporting/graph_builder.main.php,
+	include/functions_graph.php, include/functions_visual_map.php,
+	include/functions_custom_graphs.php, include/constants.php,
+	operation/reporting/graph_viewer.php: killing unicorns and magic
+	numbers for the kind of custom graphs.
+
 2014-05-27  Sergio Martin <sergio.martin@artica.es>
 
 	* godmode/agentes/agent_wizard.snmp_explorer.php: Fix wrong
